Add Bayes Theorem theory

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the dataset as images from videos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -24,19 +31,25 @@
     "assert base_path.exists()\n",
     "\n",
     "video_files_gt = list(base_path.glob(\"*_gt_*.avi\"))\n",
-    "video_files = sorted([video_file for video_file in base_path.glob(\"*.avi\") if video_file not in video_files_gt])\n",
+    "video_files = sorted(\n",
+    "    [\n",
+    "        video_file\n",
+    "        for video_file in base_path.glob(\"*.avi\")\n",
+    "        if video_file not in video_files_gt\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "videos:list[tuple[Path, Path]] = []\n",
+    "videos: list[tuple[Path, Path]] = []\n",
     "for video_file in video_files:\n",
     "    vf_gt_wc = f\"{video_file.stem}_gt_*{video_file.suffix}\"\n",
     "    try:\n",
     "        video_file_gt = list(base_path.glob(vf_gt_wc))[0]\n",
     "        videos.append((video_file, video_file_gt))\n",
-    "        \n",
+    "\n",
     "    except IndexError:\n",
     "        print(f\"Could not find ground truth for {video_file}\")\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "for video_file, video_file_gt in videos:\n",
     "    print(f\"Processing {video_file.name} and {video_file_gt.name}\")\n",
     "\n",
@@ -48,13 +61,20 @@
     "    if masks_path.exists():\n",
     "        print(f\"Skipping {video_name} as it already exists\")\n",
     "        continue\n",
-    "    \n",
+    "\n",
     "    masks_path.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "    frames_filenames = frames_path / f\"{video_name}_%04d.png\"\n",
     "    masks_filenames = masks_path / f\"{video_name}_%04d.png\"\n",
     "    !ffmpeg -loglevel quiet -hide_banner -y -i \"{video_file}\" -vf \"fps=4\" \"{frames_filenames}\"\n",
     "    !ffmpeg -loglevel quiet -hide_banner -y -i \"{video_file_gt}\" -vf \"fps=4\" \"{masks_filenames}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create color histograms (one for the queried color and one for the non-colors)"
    ]
   },
   {
@@ -66,7 +86,9 @@
     "HIST_SIZE = 32\n",
     "\n",
     "image_paths = [base_path / video_file.stem for video_file in video_files]\n",
-    "images_paths = [list((image_path / \"frames\").glob(\"*png\")) for image_path in image_paths]\n",
+    "images_paths = [\n",
+    "    list((image_path / \"frames\").glob(\"*png\")) for image_path in image_paths\n",
+    "]\n",
     "\n",
     "color_hists = []\n",
     "for image_paths in tqdm(images_paths):\n",
@@ -119,6 +141,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bayes Theorem Formulation\n",
+    "\n",
+    "Given:\n",
+    "\n",
+    "- $ \\text{color\\_hist\\_sum\\_s} $: Sum of histogram counts for the query color.\n",
+    "- $ \\text{non\\_color\\_hist\\_sum\\_n} $: Sum of histogram counts for non-query colors.\n",
+    "- $ \\text{color\\_hist\\_sum} $: Histogram count for a specific RGB value under the query color.\n",
+    "- $ \\text{non\\_color\\_hist\\_sum} $: Histogram count for a specific RGB value under non-query colors.\n",
+    "- $ p_{\\text{rgb\\_color}},\\ p_{\\text{rgb\\_non\\_color}} $: Conditional probabilities.\n",
+    "- $ p_{\\text{color}},\\ p_{\\text{non\\_color}} $: Prior probabilities.\n",
+    "- $ {P(\\text{rgb})} $: The total chance of seeing an RGB value anywhere, computed by weighing its conditional probabilities by the class priors\n",
+    "- $ {P(\\text{chk\\_color} \\mid \\text{rgb})} $: Posterior probability that a given color belongs to the query color class, after observing the RGB value\n",
+    "\n",
+    "\n",
+    "### Equations:\n",
+    "\n",
+    "$$\n",
+    "P(\\text{rgb} \\mid \\text{query\\_color}):\n",
+    "p_{\\text{rgb\\_color}} = \\frac{\\text{color\\_hist\\_sum}}{\\text{color\\_hist\\_sum\\_s}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P(\\text{rgb} \\mid \\sim\\text{query\\_color}):\n",
+    "p_{\\text{rgb\\_non\\_color}} = \\frac{\\text{non\\_color\\_hist\\_sum}}{\\text{non\\_color\\_hist\\_sum\\_n}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P(\\text{query\\_color}):\n",
+    "p_{\\text{color}} = \\frac{\\text{color\\_hist\\_sum\\_s}}{\\text{color\\_hist\\_sum\\_s} + \\text{non\\_color\\_hist\\_sum\\_n}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P(\\sim\\text{query\\_color}):\n",
+    "p_{\\text{non\\_color}} = 1 - P(\\text{query\\_color})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P(\\text{rgb}) = p_{\\text{rgb\\_color}} \\times p_{\\text{color}} + p_{\\text{rgb\\_non\\_color}} \\times p_{\\text{non\\_color}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P(\\text{chk\\_color} \\mid \\text{rgb}) = \\frac{p_{\\text{rgb\\_color}} \\times p_{\\text{color}}}{P(\\text{rgb})}\n",
+    "$$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -141,9 +212,7 @@
     "print(f\"{color_hist_sum_s=}, {non_color_hist_sum_n=}\")\n",
     "\n",
     "# Hit it Bayes!\n",
-    "p_color = color_hist_sum_s / (\n",
-    "    color_hist_sum_s + non_color_hist_sum_n\n",
-    ")  # P(query_color)\n",
+    "p_color = color_hist_sum_s / (color_hist_sum_s + non_color_hist_sum_n)  # P(query_color)\n",
     "p_color_mat = np.asanyarray(p_color, dtype=np.float64)\n",
     "\n",
     "p_non_color = 1 - p_color  # P(~query_color)\n",
@@ -151,9 +220,7 @@
     "print(f\"{p_color=}, {p_non_color=}  {p_color+p_non_color=}\")\n",
     "\n",
     "p_rgb_color = color_hist_sum / color_hist_sum_s  # P(rgb|query_color)\n",
-    "p_rgb_non_color = (\n",
-    "    non_color_hist_sum / non_color_hist_sum_n\n",
-    ")  # P(rgb|~query_color)\n",
+    "p_rgb_non_color = non_color_hist_sum / non_color_hist_sum_n  # P(rgb|~query_color)\n",
     "print(f\"{np.sum(p_rgb_color)=}, {np.sum(p_rgb_non_color)=}\")\n",
     "\n",
     "p_color_mul = cv2.multiply(p_rgb_color, p_color_mat)\n",
@@ -206,7 +273,9 @@
     "test_file = test_files[2]\n",
     "test_image_bgr = cv2.imread(str(test_file))\n",
     "test_image_rgb = cv2.cvtColor(test_image_bgr, cv2.COLOR_BGR2RGB)\n",
-    "test_image_rgb = cv2.resize(test_image_rgb, None, fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA)\n",
+    "test_image_rgb = cv2.resize(\n",
+    "    test_image_rgb, None, fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA\n",
+    ")\n",
     "\n",
     "indices = np.floor(test_image_rgb * factor).astype(int)\n",
     "canvas = test_image_rgb.copy()\n",
@@ -216,10 +285,10 @@
     "for pidx, p_color_rgb in enumerate(p_color_rgbs):\n",
     "    # Fetch probabilities using advanced indexing\n",
     "    prob = p_color_rgb[indices[:, :, 0], indices[:, :, 1], indices[:, :, 2]]\n",
-    "    \n",
+    "\n",
     "    # Paint the canvas at these locations\n",
     "    mask[prob > THETA] = 255\n",
-    "    \n",
+    "\n",
     "    # Denoise the mask with morphological operations\n",
     "    mask = cv2.dilate(mask, kernel, None, iterations=5)\n",
     "    mask = cv2.erode(mask, kernel, None, iterations=5)\n",
