--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -144,48 +144,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bayes Theorem Formulation\n",
+    "## Bayes' Theorem\n",
+    "\n",
+    "Bayes' theorem allows you to update the probability of a hypothesis based on new evidence:\n",
+    "\n",
+    "$$\n",
+    "P(A \\mid B) = \\frac{P(B \\mid A) \\times P(A)}{P(B)}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $ P(A \\mid B) $: Posterior probability — the probability of hypothesis \\( A \\) given observed evidence \\( B \\).\n",
+    "- $ P(B \\mid A) $: Likelihood — the probability of observing \\( B \\) given that \\( A \\) is true.\n",
+    "- $ P(A) $: Prior probability — the initial probability of hypothesis \\( A \\) being true.\n",
+    "- $ P(B) $: Marginal probability — the total probability of observing \\( B \\)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Color Model Formulation using Bayes' Theorem\n",
     "\n",
     "Given:\n",
     "\n",
-    "- $ \\text{color\\_hist\\_sum\\_s} $: Sum of histogram counts for the query color.\n",
-    "- $ \\text{non\\_color\\_hist\\_sum\\_n} $: Sum of histogram counts for non-query colors.\n",
-    "- $ \\text{color\\_hist\\_sum} $: Histogram count for a specific RGB value under the query color.\n",
-    "- $ \\text{non\\_color\\_hist\\_sum} $: Histogram count for a specific RGB value under non-query colors.\n",
-    "- $ p_{\\text{rgb\\_color}},\\ p_{\\text{rgb\\_non\\_color}} $: Conditional probabilities.\n",
-    "- $ p_{\\text{color}},\\ p_{\\text{non\\_color}} $: Prior probabilities.\n",
+    "- $ \\text{queryColorHistSum} $: Sum of histogram counts for the query color.\n",
+    "- $ \\text{nonQueryColorHistSum} $: Sum of histogram counts for non-query colors.\n",
+    "- $ \\text{colorHistSum} $: Histogram count for a specific RGB value under the query color.\n",
+    "- $ \\text{nonColorHistSum} $: Histogram count for a specific RGB value under non-query colors.\n",
+    "- $ p_{\\text{rgbColor}},\\ p_{\\text{rgbNonColor}} $: Conditional probabilities.\n",
+    "- $ p_{\\text{color}},\\ p_{\\text{nonColor}} $: Prior probabilities.\n",
     "- $ {P(\\text{rgb})} $: The total chance of seeing an RGB value anywhere, computed by weighing its conditional probabilities by the class priors\n",
-    "- $ {P(\\text{chk\\_color} \\mid \\text{rgb})} $: Posterior probability that a given color belongs to the query color class, after observing the RGB value\n",
+    "- $ {P(\\text{chkColor} \\mid \\text{rgb})} $: Posterior probability that a given color belongs to the query color class, after observing the RGB value\n",
     "\n",
     "\n",
     "### Equations:\n",
     "\n",
     "$$\n",
-    "P(\\text{rgb} \\mid \\text{query\\_color}):\n",
-    "p_{\\text{rgb\\_color}} = \\frac{\\text{color\\_hist\\_sum}}{\\text{color\\_hist\\_sum\\_s}}\n",
+    "P(\\text{rgb} \\mid \\text{queryColor}):\n",
+    "p_{\\text{rgbColor}} = \\frac{\\text{colorHistSum}}{\\text{queryColorHistSum}}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\text{rgb} \\mid \\sim\\text{query\\_color}):\n",
-    "p_{\\text{rgb\\_non\\_color}} = \\frac{\\text{non\\_color\\_hist\\_sum}}{\\text{non\\_color\\_hist\\_sum\\_n}}\n",
+    "P(\\text{rgb} \\mid \\sim\\text{queryColor}):\n",
+    "p_{\\text{rgbNonColor}} = \\frac{\\text{nonColorHistSum}}{\\text{nonQueryColorHistSum}}\n",
     "$$\n",
     "\n",
     "$$\n",
     "P(\\text{query\\_color}):\n",
-    "p_{\\text{color}} = \\frac{\\text{color\\_hist\\_sum\\_s}}{\\text{color\\_hist\\_sum\\_s} + \\text{non\\_color\\_hist\\_sum\\_n}}\n",
+    "p_{\\text{color}} = \\frac{\\text{queryColorHistSum}}{\\text{queryColorHistSum} + \\text{nonQueryColorHistSum}}\n",
     "$$\n",
     "\n",
     "$$\n",
     "P(\\sim\\text{query\\_color}):\n",
-    "p_{\\text{non\\_color}} = 1 - P(\\text{query\\_color})\n",
+    "p_{\\text{nonColor}} = 1 - P(\\text{queryColor})\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\text{rgb}) = p_{\\text{rgb\\_color}} \\times p_{\\text{color}} + p_{\\text{rgb\\_non\\_color}} \\times p_{\\text{non\\_color}}\n",
+    "P(\\text{rgb}) = p_{\\text{rgbColor}} \\times p_{\\text{color}} + p_{\\text{rgbNonColor}} \\times p_{\\text{nonColor}}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\text{chk\\_color} \\mid \\text{rgb}) = \\frac{p_{\\text{rgb\\_color}} \\times p_{\\text{color}}}{P(\\text{rgb})}\n",
+    "P(\\text{chkColor} \\mid \\text{rgb}) = \\frac{p_{\\text{rgbColor}} \\times p_{\\text{color}}}{P(\\text{rgb})}\n",
     "$$\n"
    ]
   },
