--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,7 +11,8 @@
     "from tqdm.notebook import tqdm\n",
     "from pathlib import Path\n",
     "\n",
-    "from src.libs import utils_graphics"
+    "from src.libs import utils_graphics\n",
+    "from src.libs.gmm import BayesianColorClassifierLabGMM"
    ]
   },
   {
@@ -39,6 +40,18 @@
     "    ]\n",
     ")\n",
     "\n",
+    "image_paths = [base_path / video_file.stem for video_file in video_files]\n",
+    "images_paths = [\n",
+    "    list((image_path / \"frames\").glob(\"*png\")) for image_path in image_paths\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "videos: list[tuple[Path, Path]] = []\n",
     "for video_file in video_files:\n",
     "    vf_gt_wc = f\"{video_file.stem}_gt_*{video_file.suffix}\"\n",
@@ -85,22 +98,18 @@
    "source": [
     "HIST_SIZE = 32\n",
     "\n",
-    "image_paths = [base_path / video_file.stem for video_file in video_files]\n",
-    "images_paths = [\n",
-    "    list((image_path / \"frames\").glob(\"*png\")) for image_path in image_paths\n",
-    "]\n",
-    "\n",
     "color_hists = []\n",
     "for image_paths in tqdm(images_paths):\n",
     "    for image_file in image_paths:\n",
     "        image_bgr = cv2.imread(str(image_file))\n",
-    "        image_rgb = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
+    "        # image_rgb = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
+    "        image_lab = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2LAB)\n",
     "\n",
     "        mask = cv2.imread(str(image_file).replace(\"frames\", \"masks\"))\n",
     "        mask = cv2.cvtColor(mask, cv2.COLOR_BGR2GRAY)\n",
     "        mask = cv2.threshold(mask, 127, 255, cv2.THRESH_BINARY)[1]\n",
     "        color_hist = cv2.calcHist(\n",
-    "            images=[image_rgb],\n",
+    "            images=[image_lab],\n",
     "            channels=[0, 1, 2],\n",
     "            mask=mask,\n",
     "            histSize=[HIST_SIZE, HIST_SIZE, HIST_SIZE],\n",
@@ -109,7 +118,7 @@
     "\n",
     "        mask_inv = cv2.bitwise_not(mask)\n",
     "        non_color_hist = cv2.calcHist(\n",
-    "            images=[image_rgb],\n",
+    "            images=[image_lab],\n",
     "            channels=[0, 1, 2],\n",
     "            mask=mask_inv,\n",
     "            histSize=[HIST_SIZE, HIST_SIZE, HIST_SIZE],\n",
@@ -175,7 +184,7 @@
     "- $ p_{\\text{rgbColor}},\\ p_{\\text{rgbNonColor}} $: Conditional probabilities.\n",
     "- $ p_{\\text{color}},\\ p_{\\text{nonColor}} $: Prior probabilities.\n",
     "- $ {P(\\text{rgb})} $: The total chance of seeing an RGB value anywhere, computed by weighing its conditional probabilities by the class priors\n",
-    "- $ {P(\\text{chkColor} \\mid \\text{rgb})} $: Posterior probability that a given color belongs to the query color class, after observing the RGB value\n",
+    "- $ {P(\\text{colorChance} \\mid \\text{rgb})} $: Posterior probability that a given color belongs to the query color class, after observing the RGB value\n",
     "\n",
     "\n",
     "### Equations:\n",
@@ -191,12 +200,12 @@
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\text{query\\_color}):\n",
+    "P(\\text{queryColor}):\n",
     "p_{\\text{color}} = \\frac{\\text{queryColorHistSum}}{\\text{queryColorHistSum} + \\text{nonQueryColorHistSum}}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\sim\\text{query\\_color}):\n",
+    "P(\\sim\\text{queryColor}):\n",
     "p_{\\text{nonColor}} = 1 - P(\\text{queryColor})\n",
     "$$\n",
     "\n",
@@ -205,7 +214,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "P(\\text{chkColor} \\mid \\text{rgb}) = \\frac{p_{\\text{rgbColor}} \\times p_{\\text{color}}}{P(\\text{rgb})}\n",
+    "P(\\text{colorChance} \\mid \\text{rgb}) = \\frac{p_{\\text{rgbColor}} \\times p_{\\text{color}}}{P(\\text{rgb})}\n",
     "$$\n"
    ]
   },
@@ -282,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "THETA = 0.5  # Probability threshold for the color model\n",
+    "THETA = 0.33  # Probability threshold for the color model\n",
     "\n",
     "idx = 9\n",
     "test_path = Path(f\"mst-e_data/subject_{idx}\")\n",
@@ -296,10 +305,11 @@
     "test_image_rgb = cv2.resize(\n",
     "    test_image_rgb, None, fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA\n",
     ")\n",
+    "test_image_lab = cv2.cvtColor(test_image_rgb, cv2.COLOR_RGB2LAB)\n",
     "\n",
-    "indices = np.floor(test_image_rgb * factor).astype(int)\n",
-    "canvas = test_image_rgb.copy()\n",
-    "mask = np.zeros_like(test_image_rgb, dtype=np.uint8)\n",
+    "indices = np.floor(test_image_lab * factor).astype(int)\n",
+    "canvas = test_image_lab.copy()\n",
+    "mask = np.zeros_like(test_image_lab, dtype=np.uint8)\n",
     "kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (5, 5))\n",
     "\n",
     "for pidx, p_color_rgb in enumerate(p_color_rgbs):\n",
@@ -322,6 +332,47 @@
     "\n",
     "utils_graphics.displayImArr(canvas)\n",
     "utils_graphics.displayImArr(test_image_rgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bayesian_classifier = BayesianColorClassifierLabGMM()\n",
+    "\n",
+    "query_images = []\n",
+    "non_query_images = []\n",
+    "for image_paths in tqdm(images_paths):\n",
+    "    for image_file in image_paths:\n",
+    "        image_bgr = cv2.imread(str(image_file))\n",
+    "        mask = cv2.imread(str(image_file).replace(\"frames\", \"masks\"))\n",
+    "        mask = cv2.cvtColor(mask, cv2.COLOR_BGR2GRAY)\n",
+    "        mask = cv2.threshold(mask, 127, 255, cv2.THRESH_BINARY)[1]\n",
+    "\n",
+    "        mask_inv = cv2.bitwise_not(mask)\n",
+    "\n",
+    "        image_mask = cv2.bitwise_and(image_bgr, image_bgr, mask=mask)\n",
+    "        image_non_mask = cv2.bitwise_and(image_bgr, image_bgr, mask=mask_inv)\n",
+    "\n",
+    "        query_images.append(image_mask)\n",
+    "        non_query_images.append(image_non_mask)\n",
+    "\n",
+    "bayesian_classifier.fit(query_images, non_query_images)\n",
+    "del query_images\n",
+    "del non_query_images\n",
+    "\n",
+    "test_image_bgr = cv2.imread(str(test_file))\n",
+    "test_image_rgb = cv2.cvtColor(test_image_bgr, cv2.COLOR_BGR2RGB)\n",
+    "test_image_bgr = cv2.resize(\n",
+    "    test_image_bgr, None, fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA\n",
+    ")\n",
+    "prob = bayesian_classifier.predict(test_image_bgr)\n",
+    "mask[prob > THETA] = 255\n",
+    "\n",
+    "canvas = cv2.bitwise_and(test_image_rgb, test_image_rgb, mask=mask)\n",
+    "utils_graphics.displayImArr(canvas)"
    ]
   }
  ],
