--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the dataset as images from videos"
+    "### Create the dataset as images from videos"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create color histograms (one for the queried color and one for the non-colors)"
+    "### Create color histograms (one for the queried color and one for the non-colors)"
    ]
   },
   {
@@ -114,7 +114,6 @@
     "for image_paths in tqdm(images_paths):\n",
     "    for image_file in image_paths:\n",
     "        image_bgr = cv2.imread(str(image_file))\n",
-    "        # image_rgb = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2RGB)\n",
     "        image_lab = cv2.cvtColor(image_bgr, cv2.COLOR_BGR2LAB)\n",
     "\n",
     "        mask = cv2.imread(str(image_file).replace(\"frames\", \"masks\"))\n",
@@ -185,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Color Model Formulation using Bayes' Theorem\n",
+    "### Color Model Formulation using Bayes' Theorem\n",
     "\n",
     "Given:\n",
     "\n",
@@ -237,64 +236,82 @@
    "outputs": [],
    "source": [
     "EPS = np.finfo(float).eps\n",
-    "p_color_rgbs = []\n",
     "\n",
-    "color_hist_sum = color_hists_sum\n",
-    "assert color_hist_sum is not None\n",
-    "non_color_hist_sum = non_color_hists_sum\n",
-    "assert non_color_hist_sum is not None\n",
+    "data_path = Path(\"./data\")\n",
+    "assert data_path.exists()\n",
+    "bayesian_color_model_file = data_path / \"bayesian_color_model.npy\"\n",
     "\n",
-    "color_hist_sum_s = np.sum(\n",
-    "    color_hist_sum\n",
-    ")  # Value for the total sum of the pixel count of each COLOR bin\n",
-    "non_color_hist_sum_n = np.sum(\n",
-    "    non_color_hist_sum\n",
-    ")  # Value for the total sum of the pixel count of each NON-COLOR bin\n",
-    "print(f\"{color_hist_sum_s=}, {non_color_hist_sum_n=}\")\n",
+    "if bayesian_color_model_file.exists():\n",
+    "    bayesian_color_model = np.load(bayesian_color_model_file)\n",
+    "    print(f\"Loaded Bayesian Color Model from {bayesian_color_model_file}\")\n",
+    "    p_color_rgbs = list(bayesian_color_model)\n",
     "\n",
-    "# Hit it Bayes!\n",
-    "p_color = color_hist_sum_s / (color_hist_sum_s + non_color_hist_sum_n)  # P(query_color)\n",
-    "p_color_mat = np.asanyarray(p_color, dtype=np.float64)\n",
+    "else:\n",
+    "    p_color_rgbs = []\n",
     "\n",
-    "p_non_color = 1 - p_color  # P(~query_color)\n",
-    "p_non_color_mat = np.asanyarray(p_non_color, dtype=np.float64)\n",
-    "print(f\"{p_color=}, {p_non_color=}  {p_color+p_non_color=}\")\n",
+    "    color_hist_sum = color_hists_sum\n",
+    "    assert color_hist_sum is not None\n",
+    "    non_color_hist_sum = non_color_hists_sum\n",
+    "    assert non_color_hist_sum is not None\n",
     "\n",
-    "p_rgb_color = color_hist_sum / color_hist_sum_s  # P(rgb|query_color)\n",
-    "p_rgb_non_color = non_color_hist_sum / non_color_hist_sum_n  # P(rgb|~query_color)\n",
-    "print(f\"{np.sum(p_rgb_color)=}, {np.sum(p_rgb_non_color)=}\")\n",
+    "    color_hist_sum_s = np.sum(\n",
+    "        color_hist_sum\n",
+    "    )  # Value for the total sum of the pixel count of each COLOR bin\n",
+    "    non_color_hist_sum_n = np.sum(\n",
+    "        non_color_hist_sum\n",
+    "    )  # Value for the total sum of the pixel count of each NON-COLOR bin\n",
+    "    print(f\"{color_hist_sum_s=}, {non_color_hist_sum_n=}\")\n",
     "\n",
-    "p_color_mul = cv2.multiply(p_rgb_color, p_color_mat)\n",
-    "print(np.amin(p_color_mul), np.amax(p_color_mul))\n",
-    "print(f\"{p_color_mul.shape=}  {np.sum(p_color_mul)=}\")\n",
+    "    # Hit it Bayes!\n",
+    "    p_color = color_hist_sum_s / (color_hist_sum_s + non_color_hist_sum_n)  # P(query_color)\n",
+    "    p_color_mat = np.asanyarray(p_color, dtype=np.float64)\n",
     "\n",
-    "p_non_color_mul = cv2.multiply(p_rgb_non_color, p_non_color_mat)\n",
-    "print(np.amin(p_non_color_mul), np.amax(p_non_color_mul))\n",
-    "print(f\"{p_non_color_mul.shape=}  {np.sum(p_non_color_mul)=}\")\n",
+    "    p_non_color = 1 - p_color  # P(~query_color)\n",
+    "    p_non_color_mat = np.asanyarray(p_non_color, dtype=np.float64)\n",
+    "    print(f\"{p_color=}, {p_non_color=}  {p_color+p_non_color=}\")\n",
     "\n",
-    "p_rgb = (\n",
-    "    p_rgb_color * p_color + p_rgb_non_color * p_non_color\n",
-    ")  # P(rgb) : chance of encountering color rgb\n",
+    "    p_rgb_color = color_hist_sum / color_hist_sum_s  # P(rgb|query_color)\n",
+    "    p_rgb_non_color = non_color_hist_sum / non_color_hist_sum_n  # P(rgb|~query_color)\n",
+    "    print(f\"{np.sum(p_rgb_color)=}, {np.sum(p_rgb_non_color)=}\")\n",
     "\n",
-    "p_rgb[p_rgb == 0] = EPS\n",
+    "    p_color_mul = cv2.multiply(p_rgb_color, p_color_mat)\n",
+    "    print(np.amin(p_color_mul), np.amax(p_color_mul))\n",
+    "    print(f\"{p_color_mul.shape=}  {np.sum(p_color_mul)=}\")\n",
     "\n",
-    "print(np.amin(p_rgb), np.amax(p_rgb))\n",
-    "print(f\"{p_rgb.shape=}  {np.sum(p_rgb)=}\")\n",
+    "    p_non_color_mul = cv2.multiply(p_rgb_non_color, p_non_color_mat)\n",
+    "    print(np.amin(p_non_color_mul), np.amax(p_non_color_mul))\n",
+    "    print(f\"{p_non_color_mul.shape=}  {np.sum(p_non_color_mul)=}\")\n",
     "\n",
-    "# Add the color model to the list\n",
-    "print(f\"{p_rgb_color.shape=}\")\n",
+    "    p_rgb = (\n",
+    "        p_rgb_color * p_color + p_rgb_non_color * p_non_color\n",
+    "    )  # P(rgb) : chance of encountering color rgb\n",
     "\n",
-    "print(np.amin(p_color_mul), np.amax(p_color_mul))\n",
-    "print(f\"{p_color_mul.shape=}  {np.sum(p_color_mul)=}\")\n",
+    "    p_rgb[p_rgb == 0] = EPS\n",
     "\n",
-    "p_color_chance = p_rgb_color * p_color / p_rgb  # P(chk_color|rgb)\n",
+    "    print(np.amin(p_rgb), np.amax(p_rgb))\n",
+    "    print(f\"{p_rgb.shape=}  {np.sum(p_rgb)=}\")\n",
     "\n",
-    "print(np.amin(p_color_chance), np.amax(p_color_chance))\n",
-    "print(f\"{p_color_chance.shape=}  {np.sum(p_color_chance)=}\")\n",
-    "p_color_rgbs.append(p_color_chance)\n",
+    "    # Add the color model to the list\n",
+    "    print(f\"{p_rgb_color.shape=}\")\n",
     "\n",
-    "# Calculate the scaling factor for the frame\n",
-    "factor = 1.0 / 256.0 * p_color_rgbs[-1].shape[0]"
+    "    print(np.amin(p_color_mul), np.amax(p_color_mul))\n",
+    "    print(f\"{p_color_mul.shape=}  {np.sum(p_color_mul)=}\")\n",
+    "\n",
+    "    p_color_chance = p_rgb_color * p_color / p_rgb  # P(chk_color|rgb)\n",
+    "\n",
+    "    print(np.amin(p_color_chance), np.amax(p_color_chance))\n",
+    "    print(f\"{p_color_chance.shape=}  {np.sum(p_color_chance)=}\")\n",
+    "    p_color_rgbs.append(p_color_chance)\n",
+    "\n",
+    "    # Save the color model\n",
+    "    np.save(bayesian_color_model_file, p_color_rgbs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load test image"
    ]
   },
   {
@@ -303,7 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "THETA = 0.33  # Probability threshold for the color model\n",
+    "THETA = 0.5  # Probability threshold for the color model\n",
     "\n",
     "idx = 9\n",
     "test_path = Path(f\"mst-e_data/subject_{idx}\")\n",
@@ -319,12 +336,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict color mask of test image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "utils_graphics.displayImArr(test_image_rgb)\n",
+    "\n",
+    "# Calculate the scaling factor for the frame\n",
+    "factor = 1.0 / 256.0 * p_color_rgbs[-1].shape[0]\n",
     "\n",
     "test_image_lab = cv2.cvtColor(test_image_rgb, cv2.COLOR_RGB2LAB)\n",
     "\n",
@@ -334,7 +361,7 @@
     "kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (3, 3))\n",
     "\n",
     "# Initialize CRF refiner (on GPU if desired)\n",
-    "crf = CRFRefiner(pairwise_weight=0.7, num_iterations=5, device=\"cuda\")\n",
+    "crf = CRFRefiner(pairwise_weight=0.7, num_iterations=8, device=\"cuda\")\n",
     "\n",
     "for pidx, p_color_rgb in enumerate(p_color_rgbs):\n",
     "    # Fetch probabilities using advanced indexing\n",
@@ -381,7 +408,9 @@
    "source": [
     "THETA = 0.5  # Probability threshold for the color model\n",
     "\n",
-    "model_path = base_path / \"color_classifier_gmm.joblib\"\n",
+    "data_path = Path(\"./data\")\n",
+    "assert data_path.exists()\n",
+    "model_path = data_path / \"color_classifier_gmm.joblib\"\n",
     "\n",
     "bayesian_classifier = BayesianColorClassifierLabGMM(n_components=16)\n",
     "\n",
